--- a/css/app.css
+++ b/css/app.css
@@ -160,7 +160,8 @@ h1 {
     width: 80px;
     height: 30px;
     border: none;
-    background-color: rgb(36, 127, 247);
-    color: white
+    border-radius: 25px;
+    background-color: rgb(139, 140, 212);
+    color: black
 }
 
