--- a/css/app.css
+++ b/css/app.css
@@ -160,7 +160,7 @@ h1 {
     margin-top: 25%;
     width: 80px;
     height: 30px;
-    border: none;
+    border: 2px solid black;
     border-radius: 25px;
     background-color: rgb(139, 140, 212);
     color: black
